update routes & add links to features on home

--- a/studyapp/templates/home.html
+++ b/studyapp/templates/home.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Welcome</h1>
+<a href="http://localhost:5000/md_to_pdf">Markdown to PDF</a>
+<a href="http://localhost:5000/md_to_flashcard">Markdown to flashcard</a>
+<a href="http://localhost:5000/render_md">Render Markdown</a>
+<a href="http://localhost:5000/flashcard_to_pdf">Flashcard to PDF</a>
 {% endblock %}
