--- a/studyapp/templates/home.html
+++ b/studyapp/templates/home.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-<a href="http://localhost:5000/md_to_pdf">Markdown to PDF</a>
-<a href="http://localhost:5000/md_to_flashcard">Markdown to flashcard</a>
-<a href="http://localhost:5000/render_md">Render Markdown</a>
-<a href="http://localhost:5000/flashcard_to_pdf">Flashcard to PDF</a>
+<div style="display: grid; justify-items: center; padding-top: 20px">
+<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';"  href="http://localhost:5000/md_to_pdf" style="  font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Markdown to PDF</a>
+<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/md_to_flashcard" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Markdown to flashcard</a>
+<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/render_md" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Render Markdown</a>
+<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/flashcard_to_pdf" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Flashcard to PDF</a>
+</div>
 {% endblock %}
