--- a/studyapp/templates/base.html
+++ b/studyapp/templates/base.html
@@ -10,13 +10,13 @@
 			<link rel="stylesheet" href="css/base.css">
 	</head>
 	<body>
-		<div style="display: grid; grid-template-columns: 1fr 1fr 1fr; width: 100%; height: 100%; justify-items: center; border-radius: 6px; border: black; border-style: solid;">
+		<div style="margin-bottom: 20px; display: grid; grid-template-columns: 1fr 1fr 1fr; width: 100%; height: 100%; justify-items: center; border: black; border-style: solid;">
 			<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" style="  font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;" href ="/login">Login</a>
 			<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" style="  font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;" href ="/">Home</a>
 			<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" style="  font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;" href ='/signup'>Sign Up</a>
 		</div>	
 
-		<div>
+		<div style="display: grid; justify-items: center;" >
 			{% with messages = get_flashed_messages() %}
 			{% if messages %}
 			<ul>
