--- a/studyapp/templates/flashcard_to_pdf.html
+++ b/studyapp/templates/flashcard_to_pdf.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<h1 style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Please enter a flashcard (HTML file) to be converted to a PDF file</h1>
 <form method="post" enctype="multipart/form-data">
     {{ form.hidden_tag() }}
     {{ form.file }}
