--- a/studyapp/templates/home.html
+++ b/studyapp/templates/home.html
@@ -5,5 +5,6 @@
 <a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/md_to_flashcard" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Markdown to flashcard</a>
 <a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/render_md" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Render Markdown</a>
 <a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/flashcard_to_pdf" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Flashcard to PDF</a>
+<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/todo" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">To Do List</a>
 </div>
 {% endblock %}
