refactor logic, add splash page template

--- a/studyapp/templates/home.html
+++ b/studyapp/templates/home.html
@@ -2,11 +2,13 @@
 {% block content %}
 <div style="display: grid; justify-items: center; padding-top: 20px">
 <a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';"  href="http://localhost:5000/md_to_pdf" style="  font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Markdown to PDF</a>
-<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/md_to_flashcard" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Markdown to flashcard</a>
-<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/render_md" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Render Markdown</a>
-<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/flashcard_to_pdf" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Flashcard to PDF</a>
-<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/todo" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">To Do List</a>
-<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/trackHours" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Track hours worked</a>
-<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/searchText" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Search text in file</a>
+<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/md_to_flashcard">Markdown to flashcard</a>
+<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/render_md">Render Markdown</a>
+<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/flashcard_to_pdf">Flashcard to PDF</a>
+<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/todo">To Do List</a>
+<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/trackHours">Track hours worked</a>
+<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/searchText">Search text in file</a>
+<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/pomorodo">Pomodoro Timer</a>
+<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/flashcard">Create Flashcard</a>
 </div>
 {% endblock %}
