--- a/studyapp/templates/loggedin.html
+++ b/studyapp/templates/loggedin.html
@@ -1,11 +1,11 @@
-<!DOCTYPE>
+<!-- <!DOCTYPE>
 <html>
 	<head>
 		{% if title %}
 		<title> {{title}}!</title>
 		{% endif %}
 <style>
-	@import url ('https://fonts.googlepis.com/css2?family=Roboto&display=swap');
+	@import url('https://fonts.googlepis.com/css2?family=Roboto&display=swap');
 </style>
 <link rel ='stylesheet' href='css/base.css'>
 	</head>
@@ -36,4 +36,4 @@
 	<a onmouseover="this.style.color='gray';" onmouseover="this.style.color='black';" href="http://localhost:5000/todo" style="font-family:'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">To Do List</a>
 
 	</body>
-</html>
+</html> -->
