--- a/studyapp/templates/base.html
+++ b/studyapp/templates/base.html
@@ -1,33 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" href="static/css/base.css">
 		{% if title  %}
 			<title> {{title}}!</title>
 			{% endif %}
 			<style>
 				@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 			</style>
-			<link rel="stylesheet" href="css/base.css">
 	</head>
 	<body>
-		<div style="margin-bottom: 20px; display: grid; grid-template-columns: 1fr 1fr 1fr; width: 100%; height: 100%; justify-items: center; border: black; border-style: solid;">
-			<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" style="  font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;" href ="/login">Login</a>
-			<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" style="  font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;" href ="/">Home</a>
-			<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" style="  font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;" href ='/signup'>Sign Up</a>
+		<div id="base-header">
+			<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href ="/logout">Logout</a>
+			<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href ="/home">Home</a>
+			<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href ="/">Splash</a>
 		</div>	
-
 		<div style="display: grid; justify-items: center;" >
-			{% with messages = get_flashed_messages() %}
-			{% if messages %}
-			<ul>
-				{% for m in messages %}
-				<li> {{m}}</li>
-				{% endfor %}
-			</ul>
-			{% endif %}
-			{% endwith %}
-		{% block content %}
-		{% endblock %}
+			{% block content %}
+			{% endblock %}
 		</div> 
 	</body>
 </html>
