update splash page

--- a/studyapp/templates/splash.html
+++ b/studyapp/templates/splash.html
@@ -33,5 +33,69 @@
           </div>
         </div>
       </nav>
+      <div style="width: 100%; display: flex; justify-content: center;">
+      <span class="badge rounded-pill bg-primary" style="margin-top: 50px; max-width: 1000px; font-size: 48px; justify-self: center;">Study With Us!</span>
+      </div>
+
+      <div style="display: flex; width: 100%; justify-content: center; padding-top: 20px;">
+      <h1 style="max-width: 500px; text-align: center;">Here are some of the features our app supports!</h1>
+      </div>
+
+      <div style="display: flex; justify-content: center; width: 100%; padding-top: 50px;">
+      <div style="display: flex; justify-content: center; width: 50%; flex-direction: column;">
+      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <h5>Render Markdown File</h5>
+            <p>Converts markdown files to HTML and displays output to user.</p>
+            <img src="static/assets/feature1.png" class="d-block w-100" alt="Feature 1">
+          </div>
+          <div class="carousel-item" data-bs-interval="5000">
+            <h5>To Do List</h5>
+            <p>Takes input from user and adds to database.</p>
+            <img src="static/assets/feature2.png" class="d-block w-100" alt="Feature 2">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="5000">
+            <h5>Track Hours Worked</h5>
+            <p>Timer that allows users to track hours worked.</p>
+            <img src="static/assets/feature3.png" class="d-block w-100" alt="Feature 2">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="5000">
+            <h5>Search Text in File</h5>
+            <p>Allows user to upload a file and search for text within it.</p>
+            <img src="static/assets/feature4.png" class="d-block w-100" alt="Feature 2">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="5000">
+            <h5>Pomodoro Timer</h5>
+            <p>Study helper that tells you to take a break from studying every 25 minutes.</p>
+            <img src="static/assets/feature5.png" class="d-block w-100" alt="Feature 2">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      </div>
+      </div>
   </body>
 </html>
