add bootstrap theme

--- a/studyapp/templates/signup.html
+++ b/studyapp/templates/signup.html
@@ -1,4 +1,7 @@
-	<h1> Sign up for an account </h1>
+<head>
+	<link rel="stylesheet" href="static/css/bootstrap.min.css">
+</head>
+<h1> Sign up for an account </h1>
 	<form method = "POST" novalidate>
 		{{form.hidden_tag()}}
 		<p>
