--- a/studyapp/templates/base.html
+++ b/studyapp/templates/base.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+		<!-- Bootstrap CSS -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+		<link rel="stylesheet" href="static/css/bootstrap.min.css">
 		<link rel="stylesheet" href="static/css/base.css">
 		{% if title  %}
 			<title> {{title}}!</title>
@@ -10,11 +17,18 @@
 			</style>
 	</head>
 	<body>
-		<div id="base-header">
-			<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href ="/logout">Logout</a>
-			<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href ="/home">Home</a>
-			<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href ="/">Splash</a>
-		</div>	
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+		<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 30px;">
+			<div class="container-fluid">
+			  <a class="navbar-brand" href="http://localhost:5000/home">Home</a>
+				<form class="d-flex">
+				  <a class="btn btn-outline-success" href="http://localhost:5000/" style="margin-right: 10px;">Splash</a>
+				  <a class="btn btn-outline-success" href="http://localhost:5000/logout">Logout</a>
+				</form>
+			  </div>
+			</div>
+		  </nav>
 		<div style="display: grid; justify-items: center;" >
 			{% block content %}
 			{% endblock %}
