--- a/studyapp/templates/login.html
+++ b/studyapp/templates/login.html
@@ -1,3 +1,6 @@
+<head>
+	<link rel="stylesheet" href="static/css/bootstrap.min.css">
+</head>
 <h1> Sign In </h1>
 <form method = "POST" novalidate>
 	{{form.hidden_tag()}}
