html for change file use case

--- a/studyapp/templates/home.html
+++ b/studyapp/templates/home.html
@@ -8,5 +8,6 @@
 <a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/todo" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">To Do List</a>
 <a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/trackHours" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Track hours worked</a>
 <a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/searchText" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Search text in file</a>
+<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/changefile" style="font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 20px; color: black;">Change Name of File</a>
 </div>
 {% endblock %}
