--- a/studyapp/templates/home.html
+++ b/studyapp/templates/home.html
@@ -10,5 +10,6 @@
 <a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/searchText">Search text in file</a>
 <a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/pomorodo">Pomodoro Timer</a>
 <a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/flashcard">Create Flashcard</a>
+<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/changefile">Change File Name</a>
 </div>
 {% endblock %}
