new feature: create schedule

--- a/studyapp/templates/home.html
+++ b/studyapp/templates/home.html
@@ -11,5 +11,6 @@
 <a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/pomorodo">Pomodoro Timer</a>
 <a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/flashcard">Create Flashcard</a>
 <a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/changefile">Change File Name</a>
+<a onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';" href="http://localhost:5000/timeSchedule">Create Schedule</a>
 </div>
 {% endblock %}
